--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -300,6 +300,7 @@
     background-color: $fire-red;
     color: $white;
     padding: 38px;
+    z-index: 100;
 }
 
 .user-photo-instructions-btn {
@@ -369,7 +370,7 @@
     margin: 10px 10px 10px 0;
     width: 30%;
     float: left;
-    padding: 12px;
+    padding: 12px 12px 0;
     background-color: rgb(255, 251, 238);
     @extend %list-item-shadow;
 }
@@ -389,12 +390,13 @@
 
 .recipe a .recipe-row-top,
 .ingredient {
-    background-color: rgb(255, 251, 238);
-    transition: all 1s linear;
+    background-color: rgb(232, 228, 214);
+    transition: all .5s linear;
 }
 
 .recipe a .recipe-row-top:hover {
-    background-color: rgb(232, 228, 214);
+    background-color: rgb(200, 178, 98);
+    transition: all 0s linear;
 }
 
 .recipe-row-top,
@@ -406,10 +408,11 @@ a ~ .recipe-row-bottom {
     clear: both;
     height: 60px;
     @extend %centralise-inner-container;
+    justify-content: left;
 }
 
 .recipe-row-bottom button {
-    margin: 10px 5px;
+    margin: 10px 20px 10px 0;
 }
 
 .inner-delete-recipe-row form .delete-confirmation-message {
@@ -427,7 +430,7 @@ a ~ .recipe-row-bottom {
     z-index: 1;
     background-color: $flame-orange;
     width: 336px;
-    height: 220px;
+    height: 201px;
 }
 
 .ingredient img {
@@ -569,33 +572,41 @@ a ~ .recipe-row-bottom {
     width: 80%;
 }
 
-// Edit Recipes ----------------------------------------------------------------
-
 // view_recipe.html ------------------------------------------------------------
 
-.view-recipe-section {
+.view-recipe-section,
+.edit-recipe-section {
     margin-top: 65px;
 }
 
-.view-recipe-section .container:nth-of-type(1) {
+.view-recipe-section .container:nth-of-type(1),
+.edit-recipe-section .container:nth-of-type(1) {
     @extend %centralise-inner-container;
     width: 100%;
     max-width: none;
     background-color: $black;
 }
 
-.view-recipe-section .container .image-container {
+.view-recipe-section .container .image-container,
+.edit-recipe-section .container .image-container {
     position: relative;
     z-index: 1;
 }
 
-.view-recipe-section .container .image-container img {
+.view-recipe-section .container .image-container img,
+.edit-recipe-section .container .image-container img {
     height: 350px;
     position: relative;
     top: 1px;
 }
 
-.view-recipe-section h1 {
+.image-container ~ h1 {
+    max-width: 468px;
+    text-align: center;
+}
+
+.view-recipe-section h1,
+.edit-recipe-section h1 {
     position: absolute;
     color: white;
     z-index: 2;
@@ -604,6 +615,14 @@ a ~ .recipe-row-bottom {
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000;
+}
+
+.edit-recipe-section h2 {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: rgb(232, 228, 214);
+    padding: 20px 0;
 }
 
 .recipe-details-container img {
@@ -620,7 +639,11 @@ a ~ .recipe-row-bottom {
 }
 
 .recipe-details-container p {
-    padding: 20px;
+    padding: 20px 20px 0;
+}
+
+.recipe-details-container .recipe-name {
+    max-width: 116px;
 }
 
 .recipe-details-container .row {
@@ -655,7 +678,6 @@ a ~ .recipe-row-bottom {
     width: 150px;
 }
 
-.ingredients-table-header th,
 .ingredients-table-header td,
 .inserted-ingredient-row th,
 .inserted-ingredient-row td {
@@ -663,8 +685,9 @@ a ~ .recipe-row-bottom {
      letter-spacing: 2px;
 }
 
-tbody .ingredients-table-header th {
-    font-weight: 600px;
+.ingredients-table-header th {
+    font-size: 16px;
+    letter-spacing: 0.5px;
 }
 
 .recipe-instructions .no-details-row,
@@ -672,6 +695,112 @@ tbody .ingredients-table-header th {
     width: 100%;
     letter-spacing: 0.5px;
     font-size: 16px;
+}
+
+// Edit Recipes ----------------------------------------------------------------
+
+.pg-header-container {
+    margin: 20px 0 10px;
+}
+
+.edit-recipe-container .row label {
+    width: 210px;
+    display: inline-block;
+    margin-left: 0px;
+}
+
+.edit-recipe-container input {
+    width: 300px;
+    margin-right: 20px;
+}
+
+.recipe-details-1,
+.recipe-details-2,
+.recipe-details-3 {
+    margin: 20px 0;
+    background-color: rgb(255, 251, 238);
+    @extend %list-item-shadow;
+}
+
+
+.recipe-details-1 .content-row {
+    display: flex;
+    align-items: center;
+}
+
+.recipe-details-1 .photo-url input {
+    width: 726px;
+}
+
+.recipe-details-1 .photo-url i {
+    margin: 0;
+}
+
+.edit-recipe-container button {
+    margin-left: 0;
+}
+
+.edit-recipe-container hr {
+    margin: 21px 0;
+}
+
+.add-ingredient-container button {
+    font-size: 12px;
+}
+
+.recipe-details-3 table {
+    margin-bottom: 30px;
+}
+
+.section-1-data, 
+.section-2-data,
+.section-3-data {
+    padding: 20px;
+}
+
+.fa-plus-square,
+.fa-minus-square {
+    font-size: 40px;
+    cursor: pointer;
+}
+.fa-plus-square {
+    color: $add-green;
+}
+
+.fa-minus-square {
+    color: $remove-red;
+}
+
+.ingredient-box {
+    margin-right: 20px;
+}
+
+.ingredient-box option {
+    background-color: rgb(255, 251, 238);
+    border: 1px 0 solid $white;
+}
+
+.inserted-ingredient-row {
+    display: flex;
+    align-items: center;
+    background-color: $white;
+    margin: 10px;
+    padding: 5px;
+}
+
+.ingredients-table-header th,
+.inserted-ingredient-row td {
+    margin: 0;
+    width: 262px;
+}
+
+td > img {
+    width: 50px;
+    height: 50px;
+}
+
+.new-ingredient-container input {
+    margin-right: 144px;
 }
 
 // Profile Section -------------------------------------------------------------
