--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,8 @@
             </div>
             <div class="user-data">
                 <label for="user_photo">Photo image address</label>
-                <input class="user-photo-input" id="user_photo" name="user_photo" type="text" value="{{ user.user_photo }}" placeholder="Your Photo Image Address (or leave blank)"><i class="fas fa-question-circle user-photo-instructions-btn"></i>
+                <input class="user-photo-input" id="user_photo" name="user_photo" type="text" value="{{ user.user_photo }}" placeholder="Your Photo Image Address (or leave blank)">
+                <i class="fas fa-question-circle user-photo-instructions-btn"></i>
                 <div class="data-container">
                     <label for="first-name">First Name</label>
                     <input id="first_name" name="first_name" type="text" value="{{ user.first_name.title() }}" placeholder="First Name">
