--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -869,6 +869,7 @@ a ~ .recipe-row-bottom {
 .add-ingredient-container button {
   font-size: 12px; }
 
+.recipe-details-2 table,
 .recipe-details-3 table {
   margin-bottom: 30px; }
 
@@ -913,6 +914,10 @@ td > img {
 
 .new-ingredient-container input {
   margin-right: 144px; }
+
+.instructions-table-header,
+.ingredients-table-header {
+  display: none; }
 
 .profile-section {
   margin-top: 65px;
